--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,69 @@
-/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
+body {
 
-/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
-
-html {
-  color: #222;
-  font-size: 1.5em;
-  line-height: 1.4;
 }
 
+.container {
+  display: grid;
+  width: 100%;
+  margin: 0 auto;
+  grid-template-areas:
+            "a a a1  "
+            "b b b1  "
+            "c d e  ";
+  grid-template-rows: 80px
+
+}
+
+.header {
+  grid-area: a1;
+
+  letter-spacing: 10px;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 28px;
+  text-align: center;
+
+}
+
+
+.junior_developer {
+  grid-area: b1;
+  text-align: left;
+  letter-spacing: 13px;
+  word-spacing: 15px;
+  margin: 0;
+}
+.experience {
+  grid-area: e;
+  text-align: left;
+  font-family: 'Orbitron', sans-serif;
+  font-size: 35px;
+  letter-spacing: 10px;
+}
+
+#dynamic-text {
+  grid-area: d;
+  display: block;
+  width: 100%;
+  height: 100px;
+  text-align: left;
+
+}
+
+/*Начала блока куб*/
 
 .cube {
+  color: #222;
+  font-size: 1.7em;
+  line-height: 1.4;
+
+  grid-area: c;
+  padding-left: 100px;
+
   display: block;
-  padding: 200px;
+
 }
+
+
 BODY {
   perspective: 1000px;
   perspective-origin: center -5em;
@@ -29,29 +71,32 @@ BODY {
 }
 
 .side,
-.container {
+.cube-container {
   width: 10em;
   height: 10em;
 }
 
-.container {
-  border: 2px ;
+.cube-container {
+  border: 2px;
   transform-style: preserve-3d;
   animation: rotate 30s infinite linear;
 }
-.container:before,
-.container:after {
+
+.cube-container:before,
+.cube-container:after {
   content: "";
   display: block;
   position: absolute;
   width: 10em;
   height: 10em;
-  border: 2px ;
+  border: 2px;
 }
-.container:before {
+
+.cube-container:before {
   transform: rotateX(90deg);
 }
-.container:after {
+
+.cube-container:after {
   transform: rotatey(90deg);
 }
 
@@ -65,36 +110,37 @@ BODY {
 
 .back {
   transform: translateZ(-5em);
-  background: url("../img/1615140803665.jpg") center ;
+  background: url("../img/1615140803665.jpg") center;
   background-size: cover;
 }
 
 .left {
   transform: translateX(-5em) rotateY(90deg);
-  background: url("../img/1615140803665.jpg") center ;
+  background: url("../img/1615140803665.jpg") center;
   background-size: cover;
 }
 
 .right {
   transform: translateX(5em) rotateY(90deg);
-  background: url("../img/wife.jpg") center ;
+  background: url("../img/wife.jpg") center;
   background-size: cover;
 }
+
 .top {
   transform: translateY(-5em) rotateX(90deg);
-  background: url("../img/bloger.jpg") center ;
+  background: url("../img/bloger.jpg") center;
   background-size: cover;
 }
 
 .bottom {
   transform: translateY(5em) rotateX(90deg);
-  background: url("../img/family.jpg") center ;
+  background: url("../img/family.jpg") center;
   background-size: cover;
 }
 
 .front {
   transform: translateZ(5em);
-  background: url("../img/portrait.jpg") center ;
+  background: url("../img/portrait.jpg") center;
   background-size: cover;
 
 }
@@ -105,11 +151,15 @@ BODY {
   }
 }
 
-// Helpers
+/*Конец блока куб*/
 
-   HTML, BODY {
-     height: 100%;
-   }
+
+/
+/
+Helpers
+HTML, BODY {
+  height: 100%;
+}
 
 BODY {
   display: flex;
@@ -280,9 +330,9 @@ textarea {
 }
 
 @media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
   /* Style adjustments for high resolution devices */
 }
 
