--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-
+background-color: black;
 }
 
 .container {
@@ -20,6 +20,7 @@ body {
   letter-spacing: 10px;
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 28px;
+  color: gray;
   text-align: center;
 
 }
@@ -31,6 +32,8 @@ body {
   letter-spacing: 13px;
   word-spacing: 15px;
   margin: 0;
+
+  color: gray;
 }
 .experience {
   grid-area: e;
@@ -38,6 +41,7 @@ body {
   font-family: 'Orbitron', sans-serif;
   font-size: 35px;
   letter-spacing: 10px;
+  color: gray;
 }
 
 #dynamic-text {
