--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,8 @@ background-color: black;
   grid-template-areas:
             "a a a1  "
             "b b b1  "
-            "c d e  ";
+            "c d e  "
+            "c1 d1 e1  ";
   grid-template-rows: 80px
 
 }
@@ -35,13 +36,19 @@ background-color: black;
 
   color: gray;
 }
-.experience {
+#about_me {
   grid-area: e;
   text-align: left;
   font-family: 'Orbitron', sans-serif;
-  font-size: 35px;
+  font-size: 27px;
   letter-spacing: 10px;
   color: gray;
+}
+
+#about_me_items {
+  grid-area: e1;
+  color: white;
+  background-color: #555555;
 }
 
 #dynamic-text {
